--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "scripts": {
         "lint": "prettier --check \"**/*.ts\"",
         "pretty": "prettier --write \"**/*.ts\"",
-        "start": "esbuild ./index.js --define:DEBUG=true --target=es2020 --preserve-symlinks --bundle --sourcemap --outdir=. --outbase=. --color=false --servedir=. --serve=1234"
+        "start": "esbuild ./index.ts --define:DEBUG=true --target=es2020 --preserve-symlinks --bundle --sourcemap --outdir=. --outbase=. --color=false --servedir=. --serve=1234",
+        "test": "npm run lint && npm run check",
+        "check": "tsc --noEmit",
+        "watch": "tsc --noEmit --watch -p ."
     },
     "devDependencies": {
         "esbuild": "0.23",
-        "prettier": "3.3"
+        "prettier": "3.3",
+        "typescript": "5.5"
     },
     "engines": {
         "node": ">=18"
