--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,23 @@
 {
     "files.exclude": {
+        "{core,lib,materials,meshes,[A-Z]*}/*.js": true,
+        "**/*.js.map": true,
         "package-lock.json": true
     },
+
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
         "source.organizeImports": "explicit"
     },
-    "[javascript]": {
+
+    "npm.autoDetect": "off",
+    "typescript.tsc.autoDetect": "off",
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "typescript.preferences.importModuleSpecifierEnding": "js",
+
+    "[typescript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    "js/ts.implicitProjectConfig.checkJs": false
+    "makefile.configureOnOpen": false
 }
