--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "devDependencies": {
         "esbuild": "0.23",
         "prettier": "3.3",
-        "typescript": "5.5"
+        "typescript": "5.5",
+        "cssnano": "7.0",
+        "htmlnano": "2.1",
+        "posthtml": "0.16",
+        "posthtml-inline-assets": "3.1",
+        "roadroller": "2.1",
+        "terser": "5.31"
     },
     "engines": {
         "node": ">=18"
