Use 64 colors for sprites

--- a/sprites/Makefile
+++ b/sprites/Makefile
@@ -9,5 +9,8 @@ all: spritesheet.png.webp
 spritesheet.png: $(SPRITES)
 	node spritesmith.cjs $^ $@
 
-%.png.webp: %.png
+spritesheet.reduced.png: spritesheet.png
+	magick $< -colors 64 -strip $@
+
+spritesheet.png.webp: spritesheet.reduced.png
 	cwebp -short -z 9 $< -o $@
