--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,7 +6,7 @@ on:
 permissions:
     contents: write
 jobs:
-    build-and-deploy:
+    build:
         runs-on: ubuntu-latest
         steps:
             - name: 🛎️ Check out
@@ -20,9 +20,34 @@ jobs:
             - name: 🧽 Lint
               run: npm run lint
             - name: 🛠️ Build
-              run: make -C play index.html
+              run: make -C play index.html ROADROLLER_FLAGS=-O2
+            - uses: actions/upload-artifact@v4
+              with:
+                  name: play
+                  path: play
+    deploy:
+        needs: build
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/download-artifact@v4
+              with:
+                  name: play
             - name: 🚀 Deploy
               uses: JamesIves/github-pages-deploy-action@v4
               with:
                   branch: gh-pages
-                  folder: play
+                  folder: .
+    package:
+        needs: build
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/download-artifact@v4
+              with:
+                  name: play
+            - run: apt-get update && apt-get install -y p7zip-full
+            - name: 📦 Package
+              run: make index.zip SEVEN_ZIP=7z
+            - uses: actions/upload-artifact@v4
+              with:
+                  name: index.zip
+                  path: index.zip
