--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -49,8 +49,8 @@ jobs:
                   name: play
             - run: sudo apt-get install -y p7zip-full
             - name: 📦 Package
-              run: make index.zip SEVEN_ZIP=7z
+              run: make -C play index.zip SEVEN_ZIP=7z
             - uses: actions/upload-artifact@v4
               with:
                   name: index.zip
-                  path: index.zip
+                  path: play/index.zip
