--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -44,16 +44,13 @@ jobs:
         needs: build
         runs-on: ubuntu-latest
         steps:
-            - name: 🛎️ Check out
-              uses: actions/checkout@v4
             - uses: actions/download-artifact@v4
               with:
                   name: play
-                  path: play
             - run: sudo apt-get install -y p7zip-full
             - name: 📦 Package
-              run: make -C play index.zip SEVEN_ZIP=7z
+              run: 7z a -mx=9 -mfb=256 -mpass=15 index.zip index.html
             - uses: actions/upload-artifact@v4
               with:
                   name: index.zip
-                  path: play/index.zip
+                  path: index.zip
