--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,8 +23,8 @@ jobs:
               run: make -C play index.html ROADROLLER_FLAGS=-O2
             - uses: actions/upload-artifact@v4
               with:
-                  name: play
-                  path: play
+                  name: index.html
+                  path: play/index.html
     deploy:
         needs: build
         runs-on: ubuntu-latest
@@ -33,20 +33,20 @@ jobs:
               uses: actions/checkout@v4
             - uses: actions/download-artifact@v4
               with:
-                  name: play
-                  path: play
+                  name: index.html
+                  path: gh-pages
             - name: 🚀 Deploy
               uses: JamesIves/github-pages-deploy-action@v4
               with:
                   branch: gh-pages
-                  folder: play
+                  folder: gh-pages
     package:
         needs: build
         runs-on: ubuntu-latest
         steps:
             - uses: actions/download-artifact@v4
               with:
-                  name: play
+                  name: index.html
             - run: sudo apt-get install -y p7zip-full
             - name: 📦 Package
               run: 7z a -mx=9 -mfb=256 -mpass=15 index.zip index.html
