Bring back the pixel card art

--- a/sprites/Makefile
+++ b/sprites/Makefile
@@ -2,15 +2,12 @@
 # On Ubuntu, install the `webp` package.
 
 SPRITES := $(wildcard *.png)
-SPRITES := $(filter-out spritesheet.png, $(SPRITES))
+SPRITES := $(filter-out spritesheet.png mask.png, $(SPRITES))
 
-all: spritesheet.png.webp
+all: spritesheet.png.webp mask.png.webp
 
 spritesheet.png: $(SPRITES)
 	node spritesmith.cjs $^ $@
 
-spritesheet.reduced.png: spritesheet.png
-	magick $< -colors 64 -depth 8 $@
-
-spritesheet.png.webp: spritesheet.reduced.png
+%.png.webp: %.png
 	cwebp -short -z 9 $< -o $@
