Define INTERVAL in esbuild

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "scripts": {
         "lint": "prettier --check \"**/*.ts\"",
         "pretty": "prettier --write \"**/*.ts\"",
-        "start": "esbuild ./index.ts --define:DEBUG=true --target=es2020 --preserve-symlinks --bundle --sourcemap --outdir=. --outbase=. --color=false --servedir=. --serve=1234",
+        "start": "esbuild ./index.ts --define:DEBUG=true --define:INTERVAL=1 --target=es2020 --preserve-symlinks --bundle --sourcemap --outdir=. --outbase=. --color=false --servedir=. --serve=1234",
         "test": "npm run lint && npm run check",
         "check": "tsc --noEmit",
         "watch": "tsc --noEmit --watch -p ."
